# BIDUA_CRM_MAIN

./: .dockerignore  .replit  README.Docker.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  replit.md
attached_assets/: Pasted-File-frozen-importlib-bootstrap-line-1387-in-gcd-import_1765280216942.txt  Pasted-INFO-Started-reloader-process-81948-using-StatReload-Pr_1765280052303.txt  Pasted-Missing-Endpoints-Jo-Chahiye-1-Admin-Endpoints-Missing-_1765276155716.txt  Pasted-Opened-backend-app-api-v1-endpoints-directory-Opened-ba_1765277765538.txt  Pasted-raceback-most-recent-call-last-File-home-runner-workspa_1765277877824.txt
backend/: .dockerignore  .env  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt  settings.jeson content
backend/alembic/: env.py
backend/alembic/versions/: 71bace5d538f_rebuild_all_tables.py  b55290a5bd5b_rebuild_all_tables.py
backend/app/: main.py
backend/app/core/: auth.py  database.py  security.py  settings.py
backend/app/crud/: __init__.py  accounts.py  attendance_and_leave.py  base.py  companies.py  crm.py  crm_lead.py  crm_tickets.py  employees.py  lead_chat.py  lead_chats.py  orders.py  products.py  support_teams.py  users.py
backend/app/models/: models.py  models01.py
backend/app/schemas/: crm.py  schemas.py  schemas01.py
backend/app/seeds/: attendance_leave_seeds.py  auth_seeds.py  company_product_seeds.py  crm_seeds.py  (+4 more)
backend/repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .dockerignore  .env.development  Dockerfile  Dockerfile.dev  nginx.conf  vite.config.ts
(+64 files in other folders)
